# GAI-Experiments

./: README.md  pyproject.toml  run llama2 locally using langchain.ipynb
.github/workflows/: digest.yml
podcast_digest/: __init__.py  digest.py  models.py  state.py
podcast_summarizer/: .gitignore  config.yaml
podcast_summarizer/podcast_digest/: __main__.py  cli.py  config.py  renderer.py  spotify.py  transcripts.py
podcast_summarizer/tests/: test_episode_detection.py  test_renderer.py
tests/: test_transcript_handling.py
